syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.eggert.engineer.grpc";
option java_outer_classname = "ScoreResourceProto";

import "google/protobuf/timestamp.proto";

service ScoreResource {
  rpc ScoresByTicket (ScoresByTicketRequest) returns (ScoresByTicketResponse) {}
  rpc OverallQualityScore (OverallQualityScoreRequest) returns (OverallQualityScoreResponse) {}
  rpc PeriodOverPeriodScoreChange (PeriodOverPeriodScoreChangeRequest) returns (PeriodOverPeriodScoreChangeResponse) {}
}

message ScoresByTicketRequest {
  google.protobuf.Timestamp period_start = 1;
  google.protobuf.Timestamp period_end = 2;
}

message OverallQualityScoreRequest {
  google.protobuf.Timestamp period_start = 1;
  google.protobuf.Timestamp period_end = 2;
}

message PeriodOverPeriodScoreChangeRequest {
  google.protobuf.Timestamp previous_period_start = 1;
  google.protobuf.Timestamp previous_period_end = 2;
  google.protobuf.Timestamp selected_period_start = 3;
  google.protobuf.Timestamp selected_period_end = 4;
}

message TicketCategoryScore {
  string name = 1;
  int32 score = 2;
}

message ScoreByTicket {
  int32 id = 1;
  repeated TicketCategoryScore ticketCategoryScores = 2;
}

message ScoresByTicketResponse {
  repeated ScoreByTicket scoreByTickets = 1;
}

message OverallQualityScoreResponse {
  int32 score = 1;
}

message PeriodOverPeriodScoreChangeResponse {
  int32 previousPeriodScore = 1;
  int32 selectedPeriodScore = 2;
}